# seismic-inversion

./: .gitignore  CMakeLists.txt
include/: forward_modelling.hpp
src/: forward_modelling.cpp  main.cpp
